--- a/app/src/main/res/layout/element_type_text_field_3.xml
+++ b/app/src/main/res/layout/element_type_text_field_3.xml
@@ -13,16 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@drawable/bottom_border_rounded_corner"
         android:paddingStart="@dimen/dimen_5dp"
         android:paddingLeft="@dimen/dimen_5dp"
         android:paddingEnd="@dimen/dimen_5dp"
-        android:paddingRight="@dimen/dimen_5dp"
-        android:paddingBottom="@dimen/dimen_15dp"
-        android:paddingTop="@dimen/dimen_10dp"
-        android:layout_marginLeft="@dimen/dimen_15dp"
-        android:layout_marginRight="@dimen/dimen_15dp"
-        >
+        android:paddingRight="@dimen/dimen_5dp">
 
         <TextView
             android:id="@+id/view_label"
@@ -49,31 +43,31 @@
             android:focusableInTouchMode="true"
             android:inputType="text"
             android:minWidth="@dimen/dimen_80dp"
-            android:paddingTop="@dimen/dimen_5dp"
             android:textSize="@dimen/size_14sp"
             android:theme="@style/MyEditText"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.AppCompatAutoCompleteTextView
+            android:id="@+id/location_field_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:maxLines="2"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/dimen_5dp"
+            android:paddingEnd="@dimen/dimen_5dp"
+            android:paddingRight="@dimen/dimen_5dp"
+            android:theme="@style/MyEditText"
+            android:textSize="@dimen/size_14sp"
             android:visibility="visible" />
     </LinearLayout>
 
 
-    <android.support.v7.widget.AppCompatAutoCompleteTextView
-        android:id="@+id/location_field_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="center_vertical"
-        android:hint="@string/please_select_label"
-        android:maxLines="2"
-        android:paddingStart="@dimen/dimen_5dp"
-        android:paddingLeft="@dimen/dimen_5dp"
-        android:paddingTop="@dimen/dimen_5dp"
-        android:paddingEnd="@dimen/dimen_5dp"
-        android:paddingRight="@dimen/dimen_5dp"
-        android:textSize="@dimen/size_14sp"
-        android:visibility="gone" />
+
 
     <TextView
         android:id="@+id/view_description"
@@ -91,6 +85,6 @@
         android:layout_height="@dimen/dimen_1dp"
         android:layout_marginTop="@dimen/dimen_12dp"
         android:background="@color/color_divider"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </LinearLayout>
