--- a/app/src/main/res/layout/option_menu_item.xml
+++ b/app/src/main/res/layout/option_menu_item.xml
@@ -3,18 +3,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
     android:paddingTop="@dimen/dimen_10dp"
-    android:paddingBottom="@dimen/dimen_10dp">
+    android:paddingBottom="@dimen/dimen_6dp">
 
 
     <LinearLayout
         android:id="@+id/view_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -35,11 +35,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_10dp"
             android:layout_marginLeft="@dimen/dimen_10dp"
-            android:paddingTop="@dimen/dimen_2dp"
-            android:paddingBottom="@dimen/dimen_5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/color_000000"
             android:textSize="@dimen/size_14sp" />
     </LinearLayout>
-
+    <View
+        android:id="@+id/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="0.5dp"
+        android:layout_gravity="bottom"
+        android:background="@color/light_gray"
+        android:layout_marginTop="@dimen/dimen_15dp"
+        android:layout_marginLeft="@dimen/dimen_15dp"
+        android:layout_marginStart="@dimen/dimen_15dp"
+        android:layout_marginEnd="@dimen/dimen_15dp"
+        android:layout_marginRight="@dimen/dimen_15dp"
+        />
 </LinearLayout>
