--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="TextAppearance" parent="TextAppearance.AppCompat.Title">
         <item name="android:typeface">monospace</item>
     </style>
+
     <style name="RatingBarSmall" parent="android:Widget.DeviceDefault.RatingBar.Small" />
+
     <style name="MyRatingBar" parent="android:Widget.DeviceDefault.RatingBar.Indicator" />
+
     <style name="RatingBar" parent="android:Widget.DeviceDefault.RatingBar" />
 
     <!--Floating label text style-->
@@ -24,5 +28,22 @@
         <item name="colorControlNormal">@color/colorPrimaryDark</item>
         <item name="colorControlActivated">@color/colorAccent</item>
         <item name="colorControlHighlight">@color/transparent</item>
+    </style>
+
+    <style name="SpinnerDateStyle" parent="AppTheme">
+        <item name="colorControlNormal">@color/transparent</item>
+    </style>
+
+    <style name="FormWidgetElement" parent="Theme.AppCompat.Light">
+        <item name="android:paddingRight">@dimen/dimen_5dp</item>
+        <item name="android:paddingEnd">@dimen/dimen_5dp</item>
+        <item name="android:paddingLeft">@dimen/dimen_5dp</item>
+        <item name="android:paddingStart">@dimen/dimen_5dp</item>
+        <item name="android:paddingBottom">@dimen/dimen_15dp</item>
+        <item name="android:paddingTop">@dimen/dimen_10dp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_15dp</item>
+        <item name="android:layout_marginStart">@dimen/dimen_15dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_15dp</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_15dp</item>
     </style>
 </resources>
