Render SubForm & Auto Completer Work

--- a/app/src/main/res/layout/element_type_select_2.xml
+++ b/app/src/main/res/layout/element_type_select_2.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~   Copyright (c) 2016 BigStep Technologies Private Limited.
   ~
   ~   You may not use this file except in compliance with the
@@ -12,122 +11,115 @@
   ~
   -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/form_main_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/form_main_view"
     android:layout_gravity="center_vertical"
-    android:paddingTop="@dimen/padding_10dp"
     android:background="?android:attr/selectableItemBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="@dimen/padding_10dp">
 
     <LinearLayout
+        android:id="@+id/title_fields_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:paddingLeft="@dimen/padding_5dp"
         android:paddingStart="@dimen/padding_5dp"
-        android:paddingRight="@dimen/padding_5dp"
+        android:paddingLeft="@dimen/padding_5dp"
         android:paddingEnd="@dimen/padding_5dp"
+        android:paddingRight="@dimen/padding_5dp"
         android:paddingBottom="@dimen/padding_5dp"
-        android:id="@+id/title_fields_layout"/>
+        android:visibility="gone" />
 
     <LinearLayout
+        android:id="@+id/selector_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:paddingLeft="@dimen/padding_5dp"
-        android:paddingStart="@dimen/padding_5dp"
-        android:paddingRight="@dimen/padding_5dp"
-        android:paddingEnd="@dimen/padding_5dp"
-        android:paddingBottom="@dimen/dimen_15dp"
-        android:paddingTop="@dimen/dimen_10dp"
-        android:layout_marginLeft="@dimen/dimen_15dp"
         android:layout_marginStart="@dimen/dimen_15dp"
-        android:layout_marginRight="@dimen/dimen_15dp"
+        android:layout_marginLeft="@dimen/dimen_15dp"
         android:layout_marginEnd="@dimen/dimen_15dp"
+        android:layout_marginRight="@dimen/dimen_15dp"
         android:background="@drawable/bottom_border_rounded_corner"
-        android:id="@+id/selector_layout"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:paddingStart="@dimen/padding_5dp"
+        android:paddingLeft="@dimen/padding_5dp"
+        android:paddingTop="@dimen/dimen_10dp"
+        android:paddingEnd="@dimen/padding_5dp"
+        android:paddingRight="@dimen/padding_5dp"
+        android:paddingBottom="@dimen/dimen_15dp">
 
         <TextView
+            android:id="@+id/view_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:id="@+id/view_label"
-            android:textSize="@dimen/size_14sp"
-            android:paddingLeft="@dimen/dimen_5dp"
+            android:layout_weight="1"
             android:paddingStart="@dimen/dimen_5dp"
-            android:paddingRight="@dimen/dimen_5dp"
+            android:paddingLeft="@dimen/dimen_5dp"
             android:paddingEnd="@dimen/dimen_5dp"
-            />
+            android:paddingRight="@dimen/dimen_5dp"
+            android:textSize="@dimen/size_14sp" />
 
         <EditText
+            android:id="@+id/field_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/field_value"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:inputType="none"
-            android:cursorVisible="false"
-            android:focusableInTouchMode="false"
-            android:textSize="@dimen/size_14sp"
-            android:hint="@string/please_select"
             android:layout_gravity="center_vertical"
-            android:gravity="center_vertical|end"
+            android:layout_weight="1"
             android:background="@color/transparent"
+            android:cursorVisible="false"
             android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
-            android:drawableRight="@drawable/ic_arrow_drop_down_24dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/error_view"
-            android:paddingLeft="@dimen/padding_5dp"
-            android:paddingStart="@dimen/padding_5dp"
-            android:paddingRight="@dimen/padding_5dp"
-            android:paddingEnd="@dimen/padding_5dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:visibility="gone"
-            android:layout_gravity="center_vertical"/>
+            android:drawableRight="@drawable/ic_arrow_drop_down_24dp"
+            android:ellipsize="end"
+            android:focusableInTouchMode="false"
+            android:gravity="center_vertical|end"
+            android:hint="@string/please_select"
+            android:inputType="none"
+            android:maxLines="2"
+            android:textSize="@dimen/size_14sp" />
 
     </LinearLayout>
 
     <TextView
+        android:id="@+id/view_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/view_description"
-        android:paddingLeft="@dimen/padding_5dp"
-        android:paddingStart="@dimen/padding_5dp"
-        android:paddingRight="@dimen/padding_5dp"
-        android:paddingEnd="@dimen/padding_5dp"
         android:layout_gravity="center"
-        android:visibility="gone"
-        android:textSize="@dimen/size_14sp" />
+        android:paddingStart="@dimen/padding_5dp"
+        android:paddingLeft="@dimen/padding_5dp"
+        android:paddingEnd="@dimen/padding_5dp"
+        android:paddingRight="@dimen/padding_5dp"
+        android:textSize="@dimen/size_14sp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/error_view"
+        style="@style/fieldsValidationError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="@string/app_name"
+        android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_list"
-        android:visibility="gone"
-        android:paddingLeft="@dimen/padding_5dp"
-        android:paddingStart="@dimen/padding_5dp"
-        android:paddingRight="@dimen/padding_5dp"
-        android:paddingEnd="@dimen/padding_5dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal"
+        android:paddingStart="@dimen/padding_5dp"
+        android:paddingLeft="@dimen/padding_5dp"
+        android:paddingEnd="@dimen/padding_5dp"
+        android:paddingRight="@dimen/padding_5dp"
+        android:visibility="gone" />
 
     <View
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/dimen_12dp"
         android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/light_gray" />
+        android:layout_marginTop="@dimen/dimen_12dp"
+        android:background="@color/light_gray"
+        android:visibility="gone" />
 
 </LinearLayout>
