--- a/app/src/main/res/layout/element_type_text_field_1.xml
+++ b/app/src/main/res/layout/element_type_text_field_1.xml
@@ -62,7 +62,7 @@
         android:id="@+id/location_field_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@color/transparent"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
