--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,26 @@
         <item name="android:layout_marginRight">@dimen/dimen_15dp</item>
         <item name="android:layout_marginEnd">@dimen/dimen_15dp</item>
     </style>
+    <!--Style of text-view for form element error-->
+    <style name="fieldsValidationError">
+        <item name="android:paddingLeft">@dimen/dimen_5dp</item>
+        <item name="android:paddingStart">@dimen/dimen_5dp</item>
+        <item name="android:paddingRight">@dimen/dimen_5dp</item>
+        <item name="android:paddingEnd">@dimen/dimen_5dp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginStart">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_20dp</item>
+        <item name="android:textColor">@color/form_error</item>
+        <item name="android:textSize">@dimen/size_12sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_gravity">start</item>
+    </style>
+    <style name="formLayout2Widget">
+        <item name="android:background">@drawable/bottom_border_rounded_corner</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginStart">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_20dp</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_20dp</item>
+    </style>
 </resources>
